tests/models/snapshots/summaries/can_find_summary_org_b@livestock.snap
---
source: tests/models/livestock.rs
assertion_line: 38
expression: result
---
Ok(
    Some(
        SummaryData {
            total: 9,
            males: 3,
            females: 6,
            unkown_gender: 0,
            active: 6,
            transferred: 1,
            sold: 1,
            deceased: 1,
            species: 1,
            breeds: 1,
            total_purchased_value: 55800.00,
        },
    ),
)
