tests/models/snapshots/summaries/can_generate_summary_org_a@livestock.snap
---
source: tests/models/livestock.rs
assertion_line: 68
expression: result
---
Ok(
    LivestockSummary {
        pid: PID,
        organisation_pid: PID,
        id: ID
        total: 15,
        males: 3,
        females: 12,
        unkown_gender: 0,
        active: 14,
        transferred: 0,
        sold: 1,
        deceased: 0,
        species: 1,
        breeds: 4,
        total_purchased_value: 708045.75,
        created_at: DATE,
        updated_at: DATE,
    },
)
